tests/baselines/reference/symbolType9.errors.txt
tests/cases/conformance/es6/Symbols/symbolType9.ts(3,1): error TS2365: Operator '==' cannot be applied to types 'symbol' and 'true'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(5,1): error TS2365: Operator '!=' cannot be applied to types '0' and 'symbol'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(7,1): error TS2365: Operator '===' cannot be applied to types 'symbol' and '1'.
tests/cases/conformance/es6/Symbols/symbolType9.ts(9,1): error TS2365: Operator '!==' cannot be applied to types 'false' and 'symbol'.


==== tests/cases/conformance/es6/Symbols/symbolType9.ts (4 errors) ====
    var s = Symbol.for("equal");
    s == s;
    s == true;
    ~~~~~~~~~
!!! error TS2365: Operator '==' cannot be applied to types 'symbol' and 'true'.
    s != s;
    0 != s;
    ~~~~~~
!!! error TS2365: Operator '!=' cannot be applied to types '0' and 'symbol'.
    s === s;
    s === 1;
    ~~~~~~~
!!! error TS2365: Operator '===' cannot be applied to types 'symbol' and '1'.
    s !== s;
    false !== s;
    ~~~~~~~~~~~
!!! error TS2365: Operator '!==' cannot be applied to types 'false' and 'symbol'.